force-app/main/default/objects/DESKSCMT__Log__e/fields/DESKSCMT__Event__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Event__c</fullName>
    <label>Event</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>