force-app/main/default/objects/DESKSCMT__Log__e/fields/DESKSCMT__Message__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>