force-app/main/default/objects/DESKSCMT__Log__e/fields/DESKSCMT__MigrationId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__MigrationId__c</fullName>
    <label>Migration Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>